tsoa configurations updated to add Post requests
